--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
+	<link rel="shortcut icon" href="/assets/favicon.png" type="image/x-icon">
 	<title>Serenatto</title>
 	<link
 		href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@700&family=Barlow:wght@400;600&display=swap"
 		rel="stylesheet">
-	<link rel="stylesheet" href="./styles/main.css">
+	<link rel="stylesheet" href="/styles/main.css">
 </head>
 
 <body>
